--- a/Presenters/App.config
+++ b/Presenters/App.config
@@ -15,6 +15,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="ManageDisk" connectionString="data source=managedisk-db.cxvkbciswqb8.ap-southeast-1.rds.amazonaws.com;initial catalog=ManageDisk_Db;user id=nhom02;password=Xaydungphanmem;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="ManageDisk" connectionString="data source=.;initial catalog=ManageDiskDb;user id=sa;password=AspireE15;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
