--- a/ManageDisk_XDPM/App.config
+++ b/ManageDisk_XDPM/App.config
@@ -9,7 +9,9 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
     </startup>
-<connectionStrings><add name="ManageDisk" connectionString="data source=managedisk-db.cxvkbciswqb8.ap-southeast-1.rds.amazonaws.com;initial catalog=ManageDisk_Db;user id=nhom02;password=Xaydungphanmem;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
+  <connectionStrings>
+    <add name="ManageDisk" connectionString="data source=.;initial catalog=ManageDiskDb;user id=sa;password=AspireE15;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 <entityFramework>
 <providers>
 <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
