--- a/Models/App.config
+++ b/Models/App.config
@@ -15,4 +15,10 @@
     </providers>
   </entityFramework>
 
-<connectionStrings><add name="ManageDisk" connectionString="data source=managedisk-db.cxvkbciswqb8.ap-southeast-1.rds.amazonaws.com;initial catalog=ManageDisk_Db;user id=nhom02;password=Xaydungphanmem;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings></configuration>
+<connectionStrings><add name="ManageDisk" connectionString="data source=.;initial catalog=ManageDiskDb;user id=sa;password=AspireE15;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings></configuration>
+
+<!--
+<connectionStrings>
+  <add name="ManageDisk" connectionString="data source=managedisk-db.cxvkbciswqb8.ap-southeast-1.rds.amazonaws.com;initial catalog=ManageDisk_Db;user id=nhom02;password=Xaydungphanmem;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+</connectionStrings>
+-->
