update name of Project

--- a/ManageDisk_XDPM/IViews_Presenters/IViews.csproj
+++ b/ManageDisk_XDPM/IViews_Presenters/IViews.csproj
@@ -49,9 +49,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DTO\DTO.csproj">
+    <ProjectReference Include="..\DTO\DTOs.csproj">
       <Project>{b27225e4-a708-48f3-92ac-1a35eb6b6700}</Project>
-      <Name>DTO</Name>
+      <Name>DTOs</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
