--- a/ManageDisk_XDPM/ManageDisk_XDPM/GUIs.csproj
+++ b/ManageDisk_XDPM/ManageDisk_XDPM/GUIs.csproj
@@ -164,13 +164,13 @@
     <Content Include="Images\updateCus.png" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DTO\DTO.csproj">
+    <ProjectReference Include="..\DTO\DTOs.csproj">
       <Project>{b27225e4-a708-48f3-92ac-1a35eb6b6700}</Project>
-      <Name>DTO</Name>
+      <Name>DTOs</Name>
     </ProjectReference>
-    <ProjectReference Include="..\IViews_Presenters\IViews_Presenters.csproj">
+    <ProjectReference Include="..\IViews_Presenters\IViews.csproj">
       <Project>{1d2a7246-831c-4e2a-959c-58ad3bd83d9a}</Project>
-      <Name>IViews_Presenters</Name>
+      <Name>IViews</Name>
     </ProjectReference>
     <ProjectReference Include="..\Presenters\Presenters.csproj">
       <Project>{1de8e018-c8fb-416b-989f-de8d1dcab9de}</Project>
