--- a/ManageDisk_XDPM/ManageDisk_XDPM/GUIs.csproj
+++ b/ManageDisk_XDPM/ManageDisk_XDPM/GUIs.csproj
@@ -98,6 +98,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ThemeColor.cs" />
+    <Compile Include="Views\Disks\frmReserveDisk.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Disks\frmReserveDisk.Designer.cs">
+      <DependentUpon>frmReserveDisk.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\Disks\frmReturnDisk.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -132,6 +138,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Views\Disks\frmReserveDisk.resx">
+      <DependentUpon>frmReserveDisk.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Views\Disks\frmReturnDisk.resx">
       <DependentUpon>frmReturnDisk.cs</DependentUpon>
     </EmbeddedResource>
