--- a/ManageDisk_XDPM/ManageDisk_XDPM/GUIs.csproj
+++ b/ManageDisk_XDPM/ManageDisk_XDPM/GUIs.csproj
@@ -59,6 +59,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="RegexExpression\RegularExpression.cs" />
     <Compile Include="Views\Charge\frmInfoLateCharge.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -82,6 +83,12 @@
     </Compile>
     <Compile Include="Views\Customers\frmUpdateCustomer.Designer.cs">
       <DependentUpon>frmUpdateCustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Disks\frmCancelReservation.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Disks\frmCancelReservation.Designer.cs">
+      <DependentUpon>frmCancelReservation.cs</DependentUpon>
     </Compile>
     <Compile Include="Views\Disks\frmRentDisk.cs">
       <SubType>Form</SubType>
@@ -121,6 +128,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Views\Customers\frmUpdateCustomer.resx">
       <DependentUpon>frmUpdateCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Disks\frmCancelReservation.resx">
+      <DependentUpon>frmCancelReservation.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\Disks\frmRentDisk.resx">
       <DependentUpon>frmRentDisk.cs</DependentUpon>
