--- a/ManageDisk_XDPM/IViews_Presenters/IViews.csproj
+++ b/ManageDisk_XDPM/IViews_Presenters/IViews.csproj
@@ -48,6 +48,7 @@
     <Compile Include="frmRentDisk\ICustomerForRentDisk.cs" />
     <Compile Include="frmReserveDisk\IReserveDisk.cs" />
     <Compile Include="frmReturnDisk\IReturnDisk.cs" />
+    <Compile Include="frmSearchLateCharge\ISearchLateCharge.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
