--- a/ManageDisk_XDPM/ManageDisk_XDPM/GUIs.csproj
+++ b/ManageDisk_XDPM/ManageDisk_XDPM/GUIs.csproj
@@ -72,6 +72,12 @@
     <Compile Include="Views\Charge\frmPayChargeLate.Designer.cs">
       <DependentUpon>frmPayChargeLate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\Charge\frmSearchLateCharge.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Charge\frmSearchLateCharge.Designer.cs">
+      <DependentUpon>frmSearchLateCharge.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\Customers\frmAddCustomer.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -122,6 +128,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Views\Charge\frmPayChargeLate.resx">
       <DependentUpon>frmPayChargeLate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Charge\frmSearchLateCharge.resx">
+      <DependentUpon>frmSearchLateCharge.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\Customers\frmAddCustomer.resx">
       <DependentUpon>frmAddCustomer.cs</DependentUpon>
