--- a/ManageDisk_XDPM/Presenters/Presenters.csproj
+++ b/ManageDisk_XDPM/Presenters/Presenters.csproj
@@ -61,6 +61,7 @@
     <Compile Include="frmRentDisk\CustomerForRentDiskPresenter.cs" />
     <Compile Include="frmReserveDisk\ReserveDiskPresenter.cs" />
     <Compile Include="frmReturnDisk\DiskReturnPresenter.cs" />
+    <Compile Include="frmSearchLateCharge\SearchLateChargePresenter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
