--- a/ManageDisk_XDPM/ManageDisk_XDPM/GUIs.csproj
+++ b/ManageDisk_XDPM/ManageDisk_XDPM/GUIs.csproj
@@ -123,6 +123,12 @@
     <Compile Include="Views\Disks\frmReturnDisk.Designer.cs">
       <DependentUpon>frmReturnDisk.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\Manager\frmRemoveLateCharge.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Manager\frmRemoveLateCharge.Designer.cs">
+      <DependentUpon>frmRemoveLateCharge.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Views\Charge\frmInfoLateCharge.resx">
       <DependentUpon>frmInfoLateCharge.cs</DependentUpon>
     </EmbeddedResource>
@@ -162,6 +168,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Views\Disks\frmReturnDisk.resx">
       <DependentUpon>frmReturnDisk.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Manager\frmRemoveLateCharge.resx">
+      <DependentUpon>frmRemoveLateCharge.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
