--- a/ManageDisk_XDPM/ManageDisk_XDPM/GUIs.csproj
+++ b/ManageDisk_XDPM/ManageDisk_XDPM/GUIs.csproj
@@ -111,6 +111,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ThemeColor.cs" />
+    <Compile Include="Views\Disks\frmReportStatus.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Disks\frmReportStatus.Designer.cs">
+      <DependentUpon>frmReportStatus.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\Disks\frmReserveDisk.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -163,6 +169,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Views\Disks\frmReportStatus.resx">
+      <DependentUpon>frmReportStatus.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Views\Disks\frmReserveDisk.resx">
       <DependentUpon>frmReserveDisk.cs</DependentUpon>
     </EmbeddedResource>
